--- a/Views/Admin/RequestInvoice.cshtml
+++ b/Views/Admin/RequestInvoice.cshtml
@@ -86,6 +86,7 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POId)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().VPONumber)</th>
                                     <th>Vendor Invoices</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Status)</th>
                                     <th>Invoice</th>
@@ -98,45 +99,51 @@
                                     {
                                         if (item.Status == "Partial")
                                         {
-                                <tr class="pen-tbl-row">
-                                    <td></td>
-                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                    @*<td>
-                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
-                                    </td>*@
-                                    <td>
-                                        @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
-                                    </td>
-                                    <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                    <td>
-                                        @Html.EncodedActionLink("Request", "PORequestInvoice", "Admin",
-                                             new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Request" })
-                                    </td>
-                                </tr>
+                                            <tr class="pen-tbl-row">
+                                                <td></td>
+                                                <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                                <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                                <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                                @*<td>
+                                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
+                                                    </td>*@
+                                                <td>
+                                                    @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
+                                                </td>
+                                                <td>
+                                                    @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
+                                                </td>
+                                                <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
+                                                <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                                <td>
+                                                    @Html.EncodedActionLink("Request", "PORequestInvoice", "Admin",
+                                                         new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Request" })
+                                                </td>
+                                            </tr>
                                         }
                                         else
                                         {
-                            <tr>
-                                <td></td>
-                                <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                @*<td>
-                                    <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
-                                </td>*@
-                                <td>
-                                    @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
-                                </td>
-                                <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
-                                <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                <td>
-                                    @Html.EncodedActionLink("Request", "PORequestInvoice", "Admin",
-                                         new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Request" })
-                                </td>
-                            </tr>
+                                            <tr>
+                                                <td></td>
+                                                <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                                <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                                <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                                @*<td>
+                                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
+                                                    </td>*@
+                                                <td>
+                                                    @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
+                                                </td>
+                                                <td>
+                                                    @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
+                                                </td>
+                                                <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
+                                                <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                                <td>
+                                                    @Html.EncodedActionLink("Request", "PORequestInvoice", "Admin",
+                                                         new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Request" })
+                                                </td>
+                                            </tr>
                                         }
                                     }
                                 }
