Stock Quantity show in po request invoice

--- a/Views/Admin/POApproved.cshtml
+++ b/Views/Admin/POApproved.cshtml
@@ -133,7 +133,7 @@
                                         <td>@Html.DisplayFor(modelItem => item.POApprovedBy)</td>
                                         <td>
                                             @Html.EncodedActionLink("Download", "DownloadPO", "Admin",
-                                                new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
+                                                new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Download" })
                                         </td>
                                     </tr>
                                 }
