Edit Enquiry Working and Multiple enquiry add

--- a/Views/Admin/Enquiry.cshtml
+++ b/Views/Admin/Enquiry.cshtml
@@ -207,7 +207,7 @@
                                         @Html.TextBoxFor(m => m.EnquiryModels.CstMtrlCode,
                                 new
                                 {
-                                    @class = "form-control ecstmtrcd",
+                                    @class = "form-control cstmtrcd",
                                     placeholder = "Enter " + @Html.DisplayNameFor(m => m.EnquiryModels.CstMtrlCode)
                                 })
                                         @Html.ValidationMessageFor(m => m.EnquiryModels.CstMtrlCode, "",
