--- a/Views/Admin/Sourced.cshtml
+++ b/Views/Admin/Sourced.cshtml
@@ -60,8 +60,16 @@
                 <!-- Default box -->
                 <div class="box">
                     <div class="box-header with-border">
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                             <a href="javascript:void(0)" class="btn bg-aqua sourced">SOURCED</a>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="col-md-8">
+                                <textarea class="float-right form-control regrmk" placeholder="Enter Regret Remarks"></textarea>
+                            </div>
+                            <div class="col-md-4 float-right">
+                                <a href="javascript:void(0)" class="btn bg-red btn-edt float-right enqregret" id="enqregret">Regret</a>
+                            </div>
                         </div>
                     </div>
                     <!-- /.box-body -->
